fix: stats item styling on safari

--- a/dashboard/app/components/stats/StatsItem.module.css
+++ b/dashboard/app/components/stats/StatsItem.module.css
@@ -4,6 +4,7 @@
 	padding: 7px 16px;
 	width: calc(100% - 16px);
 
+	color: var(--text-dark);
 	background-color: transparent;
 	border: none;
 	border-radius: 8px;
